--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/sdk",
-  "version": "1.5.2-dev.20230802-2",
+  "version": "1.5.2",
   "description": "Nestia SDK and Swagger generator",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -35,7 +35,7 @@
   },
   "homepage": "https://nestia.io",
   "dependencies": {
-    "@nestia/fetcher": "^1.5.2-dev.20230802-2",
+    "@nestia/fetcher": "^1.5.2",
     "cli": "^1.0.1",
     "glob": "^7.2.0",
     "path-to-regexp": "^6.2.1",
@@ -44,16 +44,16 @@
     "tsconfck": "^2.0.1",
     "tsconfig-paths": "^4.1.1",
     "tstl": "^2.5.13",
-    "typia": "^4.1.13"
+    "typia": "^4.1.14"
   },
   "peerDependencies": {
-    "@nestia/fetcher": ">= 1.5.2-dev.20230802-2",
+    "@nestia/fetcher": ">= 1.5.2",
     "@nestjs/common": ">= 7.0.1",
     "@nestjs/core": ">= 7.0.1",
     "reflect-metadata": ">= 0.1.12",
     "ts-node": ">= 10.6.0",
     "typescript": ">= 4.8.0",
-    "typia": ">= 4.1.13"
+    "typia": ">= 4.1.14"
   },
   "devDependencies": {
     "@nestjs/common": ">= 7.0.1",
