--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,10 +10,6 @@ jobs:
         with:
           node-version: 16.x
 
-      # - name: test migrate
-      #   working-directory: ./packages/migrate
-      #   run: npm install && npm run build && npm run test
-
-      - name: test entire
+      - name: test
         working-directory: ./test
-        run: npm run start -- --skipTest
+        run: npm run start
