--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/core",
-  "version": "1.6.4-dev.20230816",
+  "version": "1.6.4-dev.20230817-3",
   "description": "Super-fast validation decorators of NestJS",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -34,7 +34,7 @@
   },
   "homepage": "https://nestia.io",
   "dependencies": {
-    "@nestia/fetcher": "^1.6.4-dev.20230816",
+    "@nestia/fetcher": "^1.6.4-dev.20230817-3",
     "@nestjs/common": ">= 7.0.1",
     "@nestjs/core": ">= 7.0.1",
     "@nestjs/platform-express": ">= 7.0.1",
@@ -47,7 +47,7 @@
     "typia": "^4.2.3"
   },
   "peerDependencies": {
-    "@nestia/fetcher": ">= 1.6.4-dev.20230816",
+    "@nestia/fetcher": ">= 1.6.4-dev.20230817-3",
     "@nestjs/common": ">= 7.0.1",
     "@nestjs/core": ">= 7.0.1",
     "@nestjs/platform-express": ">= 7.0.1",
