--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/core",
-  "version": "1.6.5",
+  "version": "1.6.6",
   "description": "Super-fast validation decorators of NestJS",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -44,19 +44,19 @@
     "raw-body": ">= 2.0.0",
     "reflect-metadata": ">= 0.1.12",
     "rxjs": ">= 6.0.0",
-    "typia": "^4.2.3"
+    "typia": "^4.3.3"
   },
   "peerDependencies": {
-    "@nestia/fetcher": ">= 1.6.5",
-    "@nestjs/common": ">= 7.0.1",
-    "@nestjs/core": ">= 7.0.1",
-    "@nestjs/platform-express": ">= 7.0.1",
-    "@nestjs/platform-fastify": ">= 7.0.1",
-    "raw-body": ">= 2.0.0",
-    "reflect-metadata": ">= 0.1.12",
-    "rxjs": ">= 6.0.0",
-    "typescript": ">= 4.8.0",
-    "typia": ">= 4.2.3"
+    "@nestia/fetcher": ">=1.6.5",
+    "@nestjs/common": ">=7.0.1",
+    "@nestjs/core": ">=7.0.1",
+    "@nestjs/platform-express": ">=7.0.1",
+    "@nestjs/platform-fastify": ">=7.0.1",
+    "raw-body": ">=2.0.0",
+    "reflect-metadata": ">=0.1.12",
+    "rxjs": ">=6.0.0",
+    "typescript": ">=4.8.0",
+    "typia": ">=4.2.3 <5.0.0"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
