--- a/packages/migrate/package.json
+++ b/packages/migrate/package.json
@@ -30,8 +30,8 @@
   },
   "homepage": "https://github.com/samchon/nestia#readme",
   "devDependencies": {
-    "@nestia/core": "^2.0.0-dev.20230904",
-    "@nestia/fetcher": "^2.0.0-dev.20230904",
+    "@nestia/core": "^2.0.0-dev.20230904-2",
+    "@nestia/fetcher": "^2.0.0-dev.20230904-2",
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "@types/node": "^20.3.3",
     "prettier": "^2.8.8",
