--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -44,7 +44,7 @@
     "tsconfck": "^2.0.1",
     "tsconfig-paths": "^4.1.1",
     "tstl": "^2.5.13",
-    "typia": ">=5.0.2 <6.0.0"
+    "typia": "^5.0.2"
   },
   "peerDependencies": {
     "@nestia/fetcher": ">=2.0.0-dev.20230908-5",
