--- a/packages/fetcher/package.json
+++ b/packages/fetcher/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/fetcher",
-  "version": "2.0.0-dev.20230909",
+  "version": "2.0.0",
   "description": "Fetcher library of Nestia SDK",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -32,7 +32,7 @@
     "@typescript-eslint/parser": "^5.46.1",
     "prettier": "^2.8.1",
     "rimraf": "^3.0.2",
-    "typescript": "^5.1.3"
+    "typescript": "^5.2.2"
   },
   "peerDependencies": {
     "typescript": ">= 4.8.0"
