--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/sdk",
-  "version": "2.0.0-dev.20230909",
+  "version": "2.0.0",
   "description": "Nestia SDK and Swagger generator",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -35,7 +35,7 @@
   },
   "homepage": "https://nestia.io",
   "dependencies": {
-    "@nestia/fetcher": ">=2.0.0-dev.20230909",
+    "@nestia/fetcher": "^2.0.0",
     "cli": "^1.0.1",
     "glob": "^7.2.0",
     "path-to-regexp": "^6.2.1",
@@ -47,7 +47,7 @@
     "typia": "^5.0.2"
   },
   "peerDependencies": {
-    "@nestia/fetcher": ">=2.0.0-dev.20230909",
+    "@nestia/fetcher": ">=2.0.0",
     "@nestjs/common": ">=7.0.1",
     "@nestjs/core": ">=7.0.1",
     "reflect-metadata": ">=0.1.12",
@@ -73,7 +73,7 @@
     "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
     "ts-patch": "v3.0.2",
-    "typescript": "^5.1.3",
+    "typescript": "^5.2.2",
     "typescript-transform-paths": "^3.4.4",
     "uuid": "^9.0.0"
   },
