--- a/benchmark/package.json
+++ b/benchmark/package.json
@@ -24,8 +24,8 @@
   },
   "homepage": "https://nestia.io",
   "dependencies": {
-    "@nestia/core": "^2.0.2",
-    "typia": "^5.0.3"
+    "@nestia/core": "^2.0.3-dev.20230916",
+    "typia": "^5.0.4"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
