--- a/benchmark/package.json
+++ b/benchmark/package.json
@@ -24,7 +24,7 @@
   },
   "homepage": "https://nestia.io",
   "dependencies": {
-    "@nestia/core": "^2.0.3-dev.20230916",
+    "@nestia/core": "^2.0.3",
     "typia": "^5.0.4"
   },
   "devDependencies": {
