--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "main": "prettier.config.js",
   "scripts": {
     "build": "node build/index.js",
+    "package:latest": "node deploy latest",
+    "package:next": "node deploy next",
+    "package:tgz": "node deploy tgz",
     "test": "cd test && npm run start"
   },
   "repository": {
