--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/core",
-  "version": "2.0.5-dev.20230921",
+  "version": "2.0.5-dev.20230921-2",
   "description": "Super-fast validation decorators of NestJS",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -34,7 +34,7 @@
   },
   "homepage": "https://nestia.io",
   "dependencies": {
-    "@nestia/fetcher": "^2.0.5-dev.20230921",
+    "@nestia/fetcher": "^2.0.5-dev.20230921-2",
     "@nestjs/common": ">= 7.0.1",
     "@nestjs/core": ">= 7.0.1",
     "@nestjs/platform-express": ">= 7.0.1",
@@ -47,7 +47,7 @@
     "typia": "^5.0.5"
   },
   "peerDependencies": {
-    "@nestia/fetcher": ">=2.0.5-dev.20230921",
+    "@nestia/fetcher": ">=2.0.5-dev.20230921-2",
     "@nestjs/common": ">=7.0.1",
     "@nestjs/core": ">=7.0.1",
     "@nestjs/platform-express": ">=7.0.1",
