--- a/packages/migrate/package.json
+++ b/packages/migrate/package.json
@@ -45,7 +45,7 @@
     "typescript-transform-paths": "^3.4.6"
   },
   "dependencies": {
-    "typia": "^5.1.0-dev.20230926-3"
+    "typia": "^5.1.1"
   },
   "files": [
     "lib",
