--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/core",
-  "version": "2.2.0-dev.20231008",
+  "version": "2.2.0-dev.20231010",
   "description": "Super-fast validation decorators of NestJS",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -34,20 +34,20 @@
   },
   "homepage": "https://nestia.io",
   "dependencies": {
-    "@nestia/fetcher": "^2.2.0-dev.20231008",
-    "@nestjs/common": ">= 7.0.1",
-    "@nestjs/core": ">= 7.0.1",
-    "@nestjs/platform-express": ">= 7.0.1",
-    "@nestjs/platform-fastify": ">= 7.0.1",
+    "@nestia/fetcher": "^2.2.0-dev.20231010",
+    "@nestjs/common": ">=7.0.1",
+    "@nestjs/core": ">=7.0.1",
+    "@nestjs/platform-express": ">=7.0.1",
+    "@nestjs/platform-fastify": ">=7.0.1",
     "detect-ts-node": "^1.0.5",
     "glob": "^7.2.0",
-    "raw-body": ">= 2.0.0",
-    "reflect-metadata": ">= 0.1.12",
-    "rxjs": ">= 6.0.0",
-    "typia": "^5.2.0"
+    "raw-body": ">=2.0.0",
+    "reflect-metadata": ">=0.1.12",
+    "rxjs": ">=6.0.0",
+    "typia": ">=5.2.0 <6.0.0"
   },
   "peerDependencies": {
-    "@nestia/fetcher": ">=2.2.0-dev.20231008",
+    "@nestia/fetcher": ">=2.2.0-dev.20231010",
     "@nestjs/common": ">=7.0.1",
     "@nestjs/core": ">=7.0.1",
     "@nestjs/platform-express": ">=7.0.1",
