To support `yarn berry` which had banned `npm prepare` script, I'd changed setup wizard of `nestia` to define `npm postinstall` script instead.
By the way, unlike the `npm prepare` script which works on only in the local drive and does not work when be installed from remote `npm`, `npm postinstall` script is working even when installing from the remote `npm`. Therefore, when publishing an `npm` module which has installed `tyipa` through setup wizard, it enforces users of derived libraries to run the `npm postinstall` command that requires `ts-patch` module.

To fix this crazy bug, I've decided to ban `yarn berry` on the setup wizard. From now on, when you run the `npx nestia setup` command, it will print a text that "yarn berry is not supported". If you still want to utilize the `yarn berry`, configure it manually by yourself please.

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nestia",
-  "version": "4.5.0",
+  "version": "5.0.0",
   "description": "Nestia CLI tool",
   "main": "bin/index.js",
   "bin": {
@@ -9,6 +9,7 @@
   "scripts": {
     "build": "rimraf bin && tsc",
     "prettier": "prettier ./src/**/*.ts --write",
+    "package:latest": "npm run build && npm publish --access public --tag latest",
     "package:next": "npm run build && npm publish --access public --tag next"
   },
   "repository": {
@@ -43,7 +44,7 @@
     "@types/node": "^18.11.16",
     "prettier": "^2.8.7",
     "rimraf": "^3.0.2",
-    "typescript": "^5.2.0"
+    "typescript": "^5.2.1"
   },
   "files": [
     "bin",
