--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/sdk",
-  "version": "2.3.0-dev.20231020",
+  "version": "2.3.0",
   "description": "Nestia SDK and Swagger generator",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -35,7 +35,7 @@
   },
   "homepage": "https://nestia.io",
   "dependencies": {
-    "@nestia/fetcher": "^2.3.0-dev.20231020",
+    "@nestia/fetcher": "^2.3.0",
     "cli": "^1.0.1",
     "get-function-location": "^2.0.0",
     "glob": "^7.2.0",
@@ -48,7 +48,7 @@
     "typia": "^5.2.3"
   },
   "peerDependencies": {
-    "@nestia/fetcher": ">=2.3.0-dev.20231020",
+    "@nestia/fetcher": ">=2.3.0",
     "@nestjs/common": ">=7.0.1",
     "@nestjs/core": ">=7.0.1",
     "reflect-metadata": ">=0.1.12",
