--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/sdk",
-  "version": "2.3.3",
+  "version": "2.3.4",
   "description": "Nestia SDK and Swagger generator",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -35,7 +35,7 @@
   },
   "homepage": "https://nestia.io",
   "dependencies": {
-    "@nestia/fetcher": "^2.3.3",
+    "@nestia/fetcher": "^2.3.4",
     "cli": "^1.0.1",
     "get-function-location": "^2.0.0",
     "glob": "^7.2.0",
@@ -44,16 +44,16 @@
     "tsconfck": "^2.0.1",
     "tsconfig-paths": "^4.1.1",
     "tstl": "^2.5.13",
-    "typia": "^5.2.3"
+    "typia": "^5.2.4"
   },
   "peerDependencies": {
-    "@nestia/fetcher": ">=2.3.3",
+    "@nestia/fetcher": ">=2.3.4",
     "@nestjs/common": ">=7.0.1",
     "@nestjs/core": ">=7.0.1",
     "reflect-metadata": ">=0.1.12",
     "ts-node": ">=10.6.0",
-    "typescript": ">=4.8.0",
-    "typia": ">=5.2.3 <6.0.0"
+    "typescript": ">=4.8.0 <5.3.0",
+    "typia": ">=5.2.4 <6.0.0"
   },
   "devDependencies": {
     "@nestjs/common": ">= 7.0.1",
