--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/sdk",
-  "version": "2.3.4",
+  "version": "2.3.5-dev.20231105-4",
   "description": "Nestia SDK and Swagger generator",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -35,7 +35,7 @@
   },
   "homepage": "https://nestia.io",
   "dependencies": {
-    "@nestia/fetcher": "^2.3.4",
+    "@nestia/fetcher": ">=2.3.4",
     "cli": "^1.0.1",
     "get-function-location": "^2.0.0",
     "glob": "^7.2.0",
@@ -44,7 +44,7 @@
     "tsconfck": "^2.0.1",
     "tsconfig-paths": "^4.1.1",
     "tstl": "^2.5.13",
-    "typia": "^5.2.4"
+    "typia": ">=5.2.4 <6.0.0"
   },
   "peerDependencies": {
     "@nestia/fetcher": ">=2.3.4",
@@ -56,6 +56,7 @@
     "typia": ">=5.2.4 <6.0.0"
   },
   "devDependencies": {
+    "@nestia/e2e": "^0.3.7",
     "@nestjs/common": ">= 7.0.1",
     "@nestjs/core": ">= 7.0.1",
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
